# Asteroids

./: .gitignore  README.md  git_commands.txt  meson.build  research.txt  tasks.txt
scripts/: compile.bash  compile.bat  configure.bash  configure.bat
src/: controller.c  controller.h  list.c  list.h  main.c  view.c  view.h
src/controller/: controller.c  controller.h
src/model/: asteroid.c  asteroid.h  model.c  model.h  object.c  object.h  polygon.c  polygon.h
src/spin/: spin.c  spin.h  spin_view.c  spin_view.h
src/util/: array.c  array.h  definitions.h  intervalthread.c  intervalthread.h  list.c  list.h  random.c  random.h  time.c  timer.c  timer.h  vararray.c  vararray.h  vector.h  vector2.h
src/view/: view.c  view.h  view_port.c  view_port.h
